# tauwar

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/canardoux/xyz/tau_war_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: tau_war.podspec
ios/Classes/: tau_war.c
lib/: tau_war.dart  tau_war_bindings_generated.dart
src/: CMakeLists.txt  tau_war.c
